--- a/.github/workflows/push-builder.yml
+++ b/.github/workflows/push-builder.yml
@@ -19,7 +19,7 @@ jobs:
 
     # Only try to publish the container image from the root repo; forks don't have permission to do so and will always get failures.
     - name: Publish container image
-      if: ${{ github.repository == "vmware-tanzu/velero" }}
+      if: github.repository == 'vmware-tanzu/velero'
       run: |
         docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
        
