--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -39,6 +39,7 @@ BIN_DIR := bin
 TOOLS_BIN_DIR := $(TOOLS_DIR)/$(BIN_DIR)
 GINKGO := $(TOOLS_BIN_DIR)/ginkgo
 KUSTOMIZE := $(TOOLS_BIN_DIR)/kustomize
+GINKGO_FOCUS ?=
 
 .PHONY:ginkgo
 ginkgo: # Build ginkgo from tools folder.
@@ -47,4 +48,4 @@ ginkgo: # Build ginkgo from tools folder.
 
 .PHONY: run
 run: ginkgo
-	$(GINKGO) . -- -velerocli=/usr/bin/velero
+	$(GINKGO) -v -focus="$(GINKGO_FOCUS)". -- -velerocli=/usr/bin/velero
