Fix project automation
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/.github/workflows/opened-issues-triage.yml
+++ b/.github/workflows/opened-issues-triage.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           project: "Velero Support Triage Board"
           column: "Needs Triage"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GH_TOKEN }}
