Reuse sample BSL yaml file
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/config/samples/velero_v1_backupstoragelocation.yaml
+++ b/config/samples/velero_v1_backupstoragelocation.yaml
@@ -10,7 +10,7 @@ spec:
   config:
     region: minio
     s3ForcePathStyle: "true"
-    s3Url: http://minio.velero.svc:9000
+    s3Url: http://<YOUR LOCAL IP ADDRESS>:9000
   objectStorage:
     bucket: velero
   provider: aws
