Configures the default BSL in BSL controller for velero upgrade
When upgrade the BSL CRDs, none of the BSL be marked as the default.
Sets the BSL `.spec.default: true` if the BSL name matches against the
`velero server --default-backup-storage-location`.

Signed-off-by: JenTing Hsiao <jenting.hsiao@suse.com>

--- a/config/crd/bases/velero.io_backupstoragelocations.yaml
+++ b/config/crd/bases/velero.io_backupstoragelocations.yaml
@@ -88,7 +88,8 @@ spec:
               description: Config is for provider-specific configuration fields.
               type: object
             default:
-              description: Default indicates this location is the default backup location.
+              description: Default indicates this location is the default backup storage
+                location.
               type: boolean
             objectStorage:
               description: ObjectStorageLocation specifies the settings necessary
