--- a/tilt-resources/examples/tilt-settings.json
+++ b/tilt-resources/examples/tilt-settings.json
@@ -15,5 +15,6 @@
     ],
     "enable_restic": false,
     "create_backup_locations": true,
-    "setup-minio": false
+    "setup-minio": false,
+    "local_goos": "darwin"
 }
