This will make a better startup config
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/tilt-resources/examples/tilt-settings.json
+++ b/tilt-resources/examples/tilt-settings.json
@@ -15,6 +15,6 @@
     ],
     "enable_restic": false,
     "create_backup_locations": true,
-    "setup-minio": false,
+    "setup-minio": true,
     "local_goos": "darwin"
 }
