--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -53,6 +53,7 @@ BSL_BUCKET ?=
 BSL_PREFIX ?=
 BSL_CONFIG ?=
 VSL_CONFIG ?=
+PLUGIN_PROVIDER ?=
 
 .PHONY:ginkgo
 ginkgo: # Make sure ginkgo is in $GOPATH/bin
@@ -63,14 +64,17 @@ run: ginkgo
 		@[ "${CREDS_FILE}" ] && echo "Using credentials from ${CREDS_FILE}" || \
 			( echo "A credentials file is required to run E2E tests, please re-run the make target with CREDS_FILE=<PathToCredentialsFile>"; exit 1 )
 		@[ "${BSL_BUCKET}" ] && echo "Using bucket ${BSL_BUCKET} to store backups from E2E tests" || \
-			(echo "Bucket to store the backups from E2E tests is required, please re-run with BUCKET=<BucketName>"; exit 1 )
+			(echo "Bucket to store the backups from E2E tests is required, please re-run with BSL_BUCKET=<BucketName>"; exit 1 )
+		@[ "${PLUGIN_PROVIDER}" ] && echo "Using plugin provider ${PLUGIN_PROVIDER} for object storage and volume snaphotting" || \
+			(echo "Plugin provider  to store the backups from E2E tests is required, please re-run with PLUGIN_PROVIDER=<pluginProviderName>"; exit 1 )
 	$(GINKGO) -v -focus="$(GINKGO_FOCUS)" . -- -velerocli=$(VELERO_CLI) \
 		-velero-image=$(VELERO_IMAGE) \
 		-credentials-file=$(CREDS_FILE) \
 		-bucket=$(BSL_BUCKET) \
 		-prefix=$(BSL_PREFIX) \
 		-bsl-config=$(BSL_CONFIG) \
-		-vsl-config=$(VSL_CONFIG)
+		-vsl-config=$(VSL_CONFIG) \
+		-plugin-provider=$(PLUGIN_PROVIDER)
 
 build: ginkgo
 	mkdir -p $(OUTPUT_DIR)
