--- a/config/crd/bases/velero.io_schedules.yaml
+++ b/config/crd/bases/velero.io_schedules.yaml
@@ -61,11 +61,6 @@ spec:
               description: Schedule is a Cron expression defining when to run the
                 Backup.
               type: string
-            useOwnerReferencesInBackup:
-              description: UseOwnerReferencesBackup specifies whether to use
-                OwnerReferences on backups created by this Schedule.
-              nullable: false
-              type: boolean
             template:
               description: Template is the definition of the Backup to be run on the
                 provided schedule
@@ -374,6 +369,11 @@ spec:
                     type: string
                   type: array
               type: object
+            useOwnerReferencesInBackup:
+              description: UseOwnerReferencesBackup specifies whether to use OwnerReferences
+                on backups created by this Schedule.
+              nullable: true
+              type: boolean
           required:
           - schedule
           - template
