--- a/tilt-resources/examples/tilt-settings.json
+++ b/tilt-resources/examples/tilt-settings.json
@@ -3,12 +3,14 @@
     "enable_providers": [
         "aws",
         "gcp",
-        "azure"
+        "azure",
+        "csi"
     ],
     "providers": { 
         "aws": "../velero-plugin-for-aws",
         "gcp": "../velero-plugin-for-gcp",
-        "azure": "../velero-plugin-for-microsoft-azure"
+        "azure": "../velero-plugin-for-microsoft-azure",
+        "csi": "../velero-plugin-for-csi"
     },
     "allowed_contexts": [
         "development"
